Fix machine state alignment for firefox Disable power button in single machine view when there is no machine

--- a/src/mist/io/static/css/machine.css
+++ b/src/mist/io/static/css/machine.css
@@ -42,6 +42,12 @@
     padding-left: 48px;
 }
 
+@-moz-document url-prefix() {
+    .single-machine-header .ui-title {
+        padding-left: 0px;
+    }
+}
+
 .single-machine-header .ajax-loader {
     position: relative;
     bottom: 30px;
